--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
-version: '3.8'
-
 services:
   file-distribution-server:
     build:
       context: .
     ports:
-      - "5000:5000"
+      - "80:5000"
     environment:
       - FLASK_APP=app.py
-      - SECRET_KEY=changeme-in-production
+      - FLASK_ENV=production
     restart: always
  
