--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,13 @@ services:
     build:
       context: .
     ports:
-      - "5000:5000"
+      - "5000:5000"  # HTTP port
     environment:
       - FLASK_APP=app.py
       - FLASK_ENV=production
+      - USE_HTTPS=true
+      - SSL_DOMAIN=${SSL_DOMAIN:-localhost}  # Domain name for SSL cert, default: localhost
+    volumes:
+      - ./ssl:/app/ssl
     restart: always
  
