--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - FLASK_APP=app.py
       - FLASK_ENV=production
       - SSL_DOMAIN=${SSL_DOMAIN:-localhost}  # Domain name for SSL cert, default: localhost
-      - USE_HTTPS=true
+      - USE_HTTPS=${USE_HTTPS:-true}
     volumes:
       - ./ssl:/app/ssl
     restart: always
